@@ -1,6 +1,13 @@
 Changes since version 3.1.0
 ---------------------------
 
+- Fixed IceGrid allocation bug which could cause allocation failures
+  when allocating multiple objects by type from allocatable servers
+  and with the same session.
+
+- Fixed the Slice translators to support spaces in paths of the
+  -I option.
+
 - The demos are not longer included in the RPM distribution.
 
 - For object adapters without endpoints, Ice.Trace.Network >= 2 now
